# personal-finance-app

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: build.yml  ci-document-linting.yml
.husky/: pre-commit
docs/adrs/: 0001-use-conventional-commits.md  0002-use-vertical-architecture-for-project.md  0003-use-python-and-fast-api.md  0004-use-poetry-for-dependency-management.md  0005-use-pytestarch-for-architecture-tests.md
scripts/: create-adr.sh
src/personal_finance_app/: main.py
src/personal_finance_app/api/modules/ledger/household/: errors.py  household.py  member.py  member_role.py
src/personal_finance_app/api/modules/ledger/household/entities/: errors.py  household.py  member.py
src/personal_finance_app/api/modules/ledger/householdaggregate/: household.py  user.py
src/personal_finance_app/api/sharedkernel/domain/: base_entity.py  error.py  error_type.py  result.py
tests/: conftest.py
tests/api/modules/ledger/: test_household.py
tests/api/modules/ledger/household/: test_household.py  test_member.py
tests/api/modules/ledger/householdaggregate/: test_household.py  test_member.py  test_user.py
tests/api/sharedkernel/domain/: test_base_entity.py  test_result.py
tests/arch_tests/: test_sharedkernel.py
tests/personal_finance_app/api/modules/ledger/household/: test_household.py  test_member.py
tests/personal_finance_app/api/sharedkernel/domain/: test_base_value_object.py  test_error.py  test_result.py
tests/personal_finance_app/arch_tests/: test_modules_layers.py
(+12 files in other folders)
